# xiaoxianji-server

./: .env.example  .env.production  .gitignore  AGENTS.md  CLAUDE.md  checkdb.js  deploy-remote.sh  deploy.sh  ecosystem.config.js  package-lock.json  package.json
deploy/: deploy.sh  nginx-xiaoxianji.conf  setup-server.sh
docs/: code-review-2026-07-08.md  全链路回归审计报告-20260709.md  前后端接口对齐检查报告-20260710.md  数据库设计文档.md
migrations/: 001_initial_schema.sql  002_add_unique_constraints.sql  003_refund_alert.sql  004_merchant_accounts.sql
scripts/: init-admin.js
server/: .env.example  .env.production  .gitignore  check-pay-full.js  check-payment-db.js  check-ssl.sh  deploy-admin.sh  ecosystem.config.js  package-lock.json  package.json  sync-credentials.js
server/deploy/: deploy.sh  nginx-xiaoxianji.conf  (+4 more)
src/: app.js  server.js
xiaoxianji-miniapp/: .env.development  .env.production  index.html  package-lock.json  package.json  project.config.json  project.private.config.json  vite.config.js
小鲜鸡PC商家端/: .env.development  .env.production  .gitignore  index.html  package-lock.json  package.json  temp_desktop.html  vite.config.js
小鲜鸡PC商家端/src-tauri/: Cargo.toml  tauri.conf.json
小鲜鸡PC商家端/src-tauri/capabilities/: default.json  mobile.json
小鲜鸡PC商家端/src-tauri/icons/: icon.icns
小鲜鸡PC商家端/src-tauri/ios/: Info.plist
小鲜鸡PC商家端/src-tauri/src/: background.rs  lib.rs  main.rs
小鲜鸡微信小程序/: .gitignore  app.js  app.json  app.wxss  project.config.json  project.private.config.json
小鲜鸡服务端/: .env.production  .gitignore  app.js  ecosystem.config.js  package-lock.json  package.json
(+438 files in other folders)
